# learn-todo-app

./: README.md
fastapi-app/: main.py  pyproject.toml
fastapi-app/todo/: __init__.py
fastapi-app/todo/routes/api/v1/: todos.py
